crates/specforge-cli/tests/snapshots/tests__parity__format_preview__mcp.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: mcp_snap
---
{
  "check": {
    "diagnostics": [],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
    "spec/messy.spec": "behavior messy \"Messy\" {\ncategory \"core\"\ncontract \"The system MUST work\"\n}\n"
  },
  "ok": true,
  "payload": {
    "all_clean": false,
    "changed_files": [
      "[ROOT]/spec/messy.spec"
    ],
    "check_only": true,
    "diagnostics": [],
    "diffs": [
      {
        "after": "behavior messy \"Messy\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
        "before": "behavior messy \"Messy\" {\ncategory \"core\"\ncontract \"The system MUST work\"\n}\n",
        "deletions": 2,
        "file_path": "[ROOT]/spec/messy.spec",
        "insertions": 2
      }
    ],
    "ok": true,
    "total_checked": 2
  }
}
